# Zombi

./: .gitignore  AuxiliarFunctions.py  GenomeSimulator.py  MANIFEST.ini  README.md  Seqsim.py  SequenceSimulator.py  ZP_functions.py  Zombi.py  ZombiPhy.py  setup.cfg  setup.py
Parameters/: GenomeParameters.tsv  SequenceParameters.tsv  SimphyParameters.tsv  SpeciesTreeParameters.tsv  ZombiPhyParameters.tsv
Validations/: GCF_000195955.2_ASM19595v2_genomic_truncated_10.gff
install/: conda_env.yaml
pip-wheel-metadata/zombi.dist-info/: METADATA
src/zombi/: AuxiliarFunctions.py  Events.py  GenomeSimulator.py  Genomes.py  Interval.py  Parameters  ReconciledTree.py  SequenceSimulator.py  SpeciesTreeSimulator.py  Tutorials  Validations  __init__.py
src/zombi.egg-info/: SOURCES.txt
src/zombi/.ipynb_checkpoints/: GenomeSimulator-checkpoint.py
test/: 100_10.gff  18_6.faa  18_6.gff  30_10.gff  30_6.gff  GenomeParametersDivisions.tsv  test_divisions.py  test_events.py  test_genomes.py  test_pieces.py
test/TestDivisions1/T/: CompleteTree.nwk  Events.tsv  Lengths.tsv
test/TestDivisions2/T/: Events.tsv  ExtantTree.nwk  Lengths.tsv  SpeciesTreeParameters.tsv
test/test_output/T/: CollapsedNodes.tsv  CompleteTree.nwk  Events.tsv  ExtantTree.nwk  Lengths.tsv
