[metadata]
name = zombi
version = 2.0.0a0
description = A phylogenetic simulator of trees, genomes and sequences that accounts for dead lineages
keywords = phylogeny, simulator, whole-genome, rearrangement

author = Adrián A. Davín
author_email = aaredav@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown

url='https://github.com/AADavin/Zombi'
project_urls =
    Bug Tracker = https://github.com/AADavin/Zombi/issues
    Source = https://github.com/AADavin/Zombi/tree/master

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
scripts =
    bin/Zombi
    bin/RateCustomizer
    bin/SpeciesSampler
python_requires = >=3.5

[options.packages.find]
where = src

#[options.package_data]
#data = Parameters/*.tsv
#* =
#  	Images/*
#    Parameters/*.tsv
#    Tutorials/Tutorial1/*
#    Tutorials/Tutorial2/*
#    Validations/*.tsv
